# veloxpm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  setup.py
python/veloxpm/: __init__.py  _validation.py  _veloxpm_core.pyi  api.py
src/: MatrixExpCalculator.h  MatrixExpCalculator_imag.h  cusolver_utils.h  main.cu  matrix.cu  matrix.h
test/: test_complex128.py  test_complex64.py  test_float32.py  test_float64.py
