[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veloxpm"
version = "2026.0503a0"
description = "CUDA-accelerated matrix exponential bindings for exp(H) and exp(iH)."
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
